fixed the bug flickering on hover in modals

--- a/stylesheets/_session.scss
+++ b/stylesheets/_session.scss
@@ -385,6 +385,8 @@ $session_message-container-border-radius: 5px;
   display: inline-block;
   position: relative;
   opacity: 0.4;
+  transform: translateZ(0);
+
   &:hover {
     opacity: 1;
   }
